--- a/public/app/views/pages/availability.html
+++ b/public/app/views/pages/availability.html
@@ -32,7 +32,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr ng-repeat="time in ['16:00', '16:30', '17:00', '17:30', '18:00', '18:30', '19:00', '19:30', '20:00', '20:30', '21:00', '21:30', '22:00', '22:30', '23:00', '23:30', '00:00', '00:30']">
+    <tr ng-repeat="time in ['4:00 PM', '4:30 PM', '5:00 PM', '5:30 PM', '6:00 PM', '6:30 PM', '7:00 PM', '7:30 PM', '8:00 PM', '8:30 PM', '9:00 PM', '9:30 PM', '10:00 PM', '10:30 PM', '11:00 PM', '11:30 PM', '12:00 AM', '12:30 AM']">
       <td id="nopad">{{ time }}</td>
       <td ng-repeat="booklist in availability.bookings" id="nopad">
         <div ng-repeat="singlebook in booklist.bookings">
@@ -56,8 +56,8 @@
     </tr>
   </thead>
   <tbody>
-    <tr ng-repeat="time in availability.times">
-      <td id="nopad">{{ time }}</td>
+    <tr ng-repeat="time in availability.hrTimes">
+      <td id="nopad">{{ time }} </td>
       <td ng-repeat="booklist in availability.bookings" id="nopad">
         <div ng-repeat="singlebook in booklist.bookings">
           <div ng-if="!availability.isAvailable(singlebook, time)" style="background-color: #c0392b">X</div>
