--- a/public/app/views/pages/manageBooking.html
+++ b/public/app/views/pages/manageBooking.html
@@ -35,7 +35,7 @@
 			<td>{{ booking.end }}</td>
 			<td class="col-sm-2">
 				<a ng-href="/bookings/{{ booking._id }}/edit" class="btn btn-danger">Edit</a>
-				<a href="/bookings/{{ booking._id }}/delete" class="btn btn-primary">Cancel</a>
+				<a href="/bookings/{{ booking._id }}/delete" class="btn btn-primary">Delete</a>
 			</td>
 		</tr>
 	</tbody>
