--- a/public/app/views/pages/userForm.html
+++ b/public/app/views/pages/userForm.html
@@ -15,12 +15,16 @@
 				    <input type="text" class="form-control" placeholder="First and Last" ng-model="user.userData.name">
 				</div>
 
-				<div class="form-group" ng-if="user.type == 'create'">
+				<div class="form-group" show-errors='{ showSuccess: true }' show-errors>
 				  	<label for="username">Username</label>
-				    <input type="text" class="form-control" placeholder="Username" ng-model="user.userData.username">
-
+				    <input type="username" class="form-control" name="username" placeholder="Username" ng-model="user.userData.username" required>
+				    <p class="help-block" ng-if="userForm.username.$error.required">Username is required</p>
 				</div>
-
+				
+                <div ng-if="user.invalidUserName">
+                    <p class="help-block">The username is unavailable</p>
+				</div>
+				
 				<div class="form-group" ng-if="user.type == 'create'">
 				  	<label for="password">Password</label>
 				    <input type="password" class="form-control" placeholder="Password" ng-model="user.userData.password">
