--- a/public/app/views/pages/login.html
+++ b/public/app/views/pages/login.html
@@ -1,7 +1,7 @@
 <!-- login.html -->
 	<div class="container">	
 		<div class="page-header" align="center">
-			<h1>Please log in to view this page</h1>
+			<h1>Please log in</h1>
 		</div>
 		<div class="row" align="center">
 			<form role="login" ng-submit="main.doLogin()">
