--- a/public/app/views/pages/bookingForm.html
+++ b/public/app/views/pages/bookingForm.html
@@ -30,10 +30,10 @@
     				</select>
     			</div>
                 
-        		<div ng-if="booking.bookingData.people >=1">
+        		<div ng-if="booking.bookingData.people >=1" >
                     <div class="form-group">
                         <label for="date">Date</label>
-                        <input type="date" min="{{ availability.initDate | date: 'yyyy-MM-dd' }}" max="{{ availability.maxDate | date: 'yyyy-MM-dd' }}" class="form-control" ng-model="booking.bookingData.date" ng-change="availability.getAvailability(booking.bookingData.date)">
+                        <input type="date" min="{{ availability.initDate | date: 'yyyy-MM-dd' }}" max="{{ availability.maxDate | date: 'yyyy-MM-dd' }}" class="form-control" ng-model="booking.bookingData.date" ng-change="availability.getAvailability(booking.bookingData.date); availability.changeMicView(booking.bookingData.date, booking.bookingData.start, booking.bookingData.end)">
                     </div>
                  
 
@@ -44,9 +44,9 @@
                     </div>
                     
 
-        			<div class="form-group">
+        			<div class="form-group" >
         				<label for="start">Start Time</label>
-        				<input type="time" step="1800" class="form-control" ng-model="booking.bookingData.start">
+        				<input type="time" step="1800" class="form-control" ng-model="booking.bookingData.start" ng-change="availability.changeMicView(booking.bookingData.date, booking.bookingData.start, booking.bookingData.end)">
         			</div>
 					
                     <div ng-if="(   (booking.bookingData.date | date: 'EEE') == 'Mon' || 
@@ -73,7 +73,7 @@
 
                     <div class="form-group">
                         <label for="end">End Time</label>
-                        <input type="time" step="1800" class="form-control" ng-model="booking.bookingData.end">
+                        <input type="time" step="1800" class="form-control" ng-model="booking.bookingData.end" ng-change="availability.changeMicView(booking.bookingData.date, booking.bookingData.start, booking.bookingData.end)">
                     </div>
 
                     <div ng-if="(   (booking.bookingData.date | date: 'EEE') == 'Mon' || 
@@ -99,19 +99,19 @@
 
         			<div class="form-group">
         				<label for="equip">iPads</label>
-        				<select name="iPad" class="form-control" ng-model="booking.bookingData.iPad">
-                            <option value="0">0</option>
-        					<option value="1">1</option>
-        					<option value="2">2</option>
-        				</select>
+        				<select name="iPad" class="form-control" ng-model="booking.bookingData.iPad" ng-options="n for n in availability.Range(0, availability.iPads)">
+                        <!-- <select name="iPad" class="form-control" ng-model="booking.bookingData.iPad" > -->
+                             <!-- <option value="0">0</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option> -->
+                        </select>
+                        
         			</div>
 
                     <div class="form-group">
                         <label for="equip">Mics</label>
-                        <select name="mic" class="form-control" ng-model="booking.bookingData.mic">
-                            <option value="0">0</option>
-                            <option value="1">1</option>
-                            <option value="2">2</option>
+                        <select name="mic" class="form-control" ng-model="booking.bookingData.mic" ng-options="n for n in availability.Range(0, availability.mics)">
+                            
                         </select>
                     </div>
 
