delete booking view

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -123,6 +123,7 @@
 	<nav class="navbar navbar-inverse navbar-fixed-bottom">
 		<div class="container">
 			<a class="navbar-text" href="/contact" class="navbar-link">Contact</a>
+            <a class="navbar-text" href="/about" class="navbar-link">About</a>
 		</div>
 	</nav>
 	
